--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="author" content="Your Name">
     <title>Fact, Joke & Riddle Generator</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CL89EGE3DJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CL89EGE3DJ');
+</script>
 </head>
 <body>
     <div class="container">
