--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fun Fact Generator - Get endless fun facts, jokes, and riddles to entertain yourself every day!">
-    <meta name="keywords" content="fun facts, jokes, riddles, random facts, daily facts, trivia, humor">
+    <meta name="description" content="Fun Fact Generator - Get endless fun facts, jokes, and riddles to entertain yourself every day and discover amazing, funny and mind blowing fun facts!">
+    <meta name="keywords" content="fun facts, jokes, riddles, random facts, daily facts, trivia, humor, cool facts, fun knowledge, did you know, surprising facts, weird facts">
     <meta name="author" content="Your Name">
     <title>Fact, Joke & Riddle Generator</title>
     <link rel="stylesheet" href="style.css">
